// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Admonition variants 1`] = `
"## Admonition variants

**Note:** This is a simple note with inline content.

**Warning: Breaking change**

The API endpoint has been deprecated.

**Tip:**

- Step one
- Step two
- Step three

**Coming Soon:** This feature is coming soon.
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Available tools 1`] = `
"## Available tools

Tools are grouped into categories. Use the \`?category=\` URL parameter to restrict which categories are active. You can pass it more than once to enable multiple categories.

| Category                          | What it enables                                                                     |
| --------------------------------- | ----------------------------------------------------------------------------------- |
| Project management (\`projects\`)   | List, create, describe, and delete projects and organizations                       |
| Branch management (\`branches\`)    | Create branches, compare schemas, reset branches to parent state                    |
| Schema (\`schema\`)                 | Inspect tables and columns; run schema changes via a safe temporary branch workflow |
| SQL (\`querying\`)                  | Execute queries and transactions; inspect database structure                        |
| Managed Better Auth (\`neon_auth\`) | Set up and configure app authentication for a branch                                |
| Neon Data API (\`data_api\`)        | Enable HTTP-based Data API access for a branch                                      |
| Documentation (\`docs\`)            | Look up Neon documentation from within your assistant (no OAuth required)           |

Search and navigation tools (search across projects, fetch resource details by ID) are available by default but disabled in [project-scoped mode](https://neon.com/docs/ai/neon-mcp-server#project-scoped-mode).

### LinkAPIKey

**Note:** To learn more about the types of API keys you can create — personal, organization, or project-scoped — see [Manage API Keys](https://neon.com/docs/manage/api-keys).

### LRNotice

**Important: Enrollment Pause for Logical Replication Beta**

We have temporarily paused new enrollments in our Logical Replication Beta program. This pause is aimed at evaluating the feature's performance and incorporating feedback from our early adopters. Please stay tuned for updates, and thank you for your interest. We plan to reopen enrollment again soon.

### PrivatePreview

**Coming Soon: Private Preview**

This feature is currently accessible in Private Preview only.

### PrivatePreviewEnquire

**Coming Soon: Private Preview**

This feature is in private preview: it's not ready for production use, and it may be briefly unavailable as we deploy updates. To get access, [sign up here](https://neon.com/blog/were-building-backends#access).

### PublicPreview

**Note: Public Preview**

This feature is in Public Preview. Please provide [Feedback](https://console.neon.tech/app/projects?modal=feedback) from the Neon Console or by connecting with us on [Discord](https://discord.gg/92vNTzKDGp).

### LRBeta

**Note: Beta**

Replicating data to Neon, where Neon is configured as a subscriber in a Postgres logical replication setup, is currently in Beta. We welcome your feedback to help improve this feature. You can provide feedback via the [Feedback](https://console.neon.tech/app/projects?modal=feedback) form in the Neon Console or by reaching out to us on [Discord](https://discord.gg/92vNTzKDGp).

### MigrationAssistant

**Note: New feature**

If you are looking to migrate your database to Neon, you may want to try our new **Migration Assistant**, which can help. Read the [guide](https://neon.com/docs/import/migration-assistant) to learn more.

### NextSteps
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > CTA 1`] = `
"## CTA

> **Get started with Neon**
>
> Create a free account and start building.
>
> [Sign up](https://console.neon.tech/signup)
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > CheckList and CheckItem 1`] = `
"## CheckList and CheckItem
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > CodeTabs 1`] = `
"## CodeTabs

**Node.js**

\`\`\`javascript
const { Client } = require('pg');
const client = new Client(process.env.DATABASE_URL);
await client.connect();
\`\`\`

**Python**

\`\`\`python
import psycopg2
conn = psycopg2.connect(os.environ["DATABASE_URL"])
\`\`\`
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > CommunityBanner 1`] = `
"## CommunityBanner

Share your feedback: [Join Discord](https://discord.gg/neon)
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > CompactCards 1`] = `
"## CompactCards

- [Next.js prompt](https://neon.com/prompts/nextjs-prompt.md): Copy a Next.js setup prompt
- [Django](https://neon.com/docs/guides/django): Open the Django guide
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Configure environment 1`] = `
"## Configure environment

Set the \`DATABASE_URL\` environment variable.

For more details, see the [driver documentation](https://neon.com/docs/serverless/serverless-driver).
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > DefinitionList 1`] = `
"## DefinitionList

Compute Unit (CU)
: A measure of computing resources (CPU and RAM) allocated to a Neon compute.

Endpoint
: The connection point for your database, providing the hostname and port for client connections.
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > DetailIconCards 1`] = `
"## DetailIconCards

- [Prisma](https://neon.com/docs/guides/prisma): Connect Prisma ORM to Neon
- [Next.js](https://neon.com/docs/guides/nextjs): Build Next.js apps with Neon
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > DocsList 1`] = `
"## DocsList

**Related guides:**

- [Prisma integration](https://neon.com/docs/guides/prisma)
- [Drizzle ORM guide](https://neon.com/docs/guides/drizzle)
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > FeatureList 1`] = `
"## FeatureList

### Instant provisioning

Create a database in milliseconds via API.

### Autoscaling

Scale compute up and down based on demand.
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > HTML passthrough 1`] = `
"## HTML passthrough

<details>

<summary>**Expandable section**</summary>

Content inside a details/summary block that should pass through as HTML.

- Nested list item one
- Nested list item two

</details>

Inline link with description: [Example](https://example.com)

Line break in a table:

| Feature   | Status               |
| --------- | -------------------- |
| Branching | GA<br/>Available now |
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Ignored components 1`] = `
"## Ignored components

[View prompt](https://neon.com/prompts/test.md)




"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > InfoBlock 1`] = `
"## InfoBlock

This is important information inside an InfoBlock. It can contain **bold text** and [links](https://neon.com/docs/introduction).
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Installation 1`] = `
"## Installation

Method: \`npm install @neondatabase/serverless\`

Install the Neon serverless driver from npm.

**Example:**

\`\`\`javascript
import { neon } from '@neondatabase/serverless';
const sql = neon(process.env.DATABASE_URL);
const result = await sql\`SELECT * FROM users\`;
\`\`\`
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > LinkPreview 1`] = `
"## LinkPreview

Values must be provided in [RFC 3339 format](https://tools.ietf.org/html/rfc3339) (Date and Time on the Internet: Timestamps).
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Markdown fundamentals 1`] = `
"## Markdown fundamentals

Regular paragraph with **bold**, _italic_, \`inline code\`, and a [link](https://neon.com/docs/introduction).

> A standard blockquote.

1. Ordered item one
2. Ordered item two

- Unordered item one
- Unordered item two

\`\`\`sql
SELECT * FROM users WHERE active = true;
\`\`\`

| Column | Type   | Description |
| ------ | ------ | ----------- |
| id     | serial | Primary key |
| name   | text   | User's name |
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > MegaLink 1`] = `
"## MegaLink

**Case Study** Retool uses the Neon API to manage over 300,000 databases. [Learn more](https://neon.com/blog/retool-case-study)
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Nested components (known edge case) 1`] = `
"## Nested components (known edge case)

**Note: Code example**

**JavaScript**

\`\`\`javascript
const sql = neon(process.env.DATABASE_URL);
\`\`\`

**Python**

\`\`\`python
conn = psycopg2.connect(os.environ["DATABASE_URL"])
\`\`\`
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Next steps 1`] = `
"## Next steps

- [Import data into your database](https://neon.com/docs/import/migrate-intro)
- [Integrate database branching into your dev workflow](https://neon.com/docs/get-started/workflow-primer)
- [Secure your app with the Neon Data API](https://neon.com/docs/data-api/get-started)
- [Set up Managed Better Auth for your app](https://neon.com/docs/auth/overview)

### NewPricing

**Coming Soon: New pricing plans**

On February 19th, 2024, Neon will launch new, simplified pricing plans. You can see the [details of all the plans here](https://neon.com/2024-plan-updates).

### AzureRegionsDeprecation

**Warning: Azure regions deprecation**

Neon Azure regions (\`azure-eastus2\`, \`azure-westus3\`, \`azure-gwc\`) are deprecated. You can no longer create new projects in Azure regions. Projects on the Free plan that have been inactive for 90 days or more are subject to deletion as of October 5, 2026.

If you have projects in Azure regions, see [Azure regions deprecation](https://neon.com/docs/import/azure-regions-deprecation) for what's changing and your options.
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Production checklist 1`] = `
"## Production checklist

- [ ] [Enable connection pooling](https://neon.com/docs/test/mdx-conversion-test#pooling)
    Connection pooling reduces latency and improves throughput.
- [ ] [Set up monitoring](https://neon.com/docs/test/mdx-conversion-test#monitoring)
    Configure alerts for storage and compute usage.
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > ProgramForm 1`] = `
"## ProgramForm

[Apply for the Agent Plan](https://neon.com/use-cases/ai-agents)
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > QuoteBlock 1`] = `
"## QuoteBlock

> Neon's branching feature transformed our development workflow.
>
> — Jane Smith, Acme Corp
>
> [Read case study](https://neon.com/blog/acme-case-study)
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Shared content components 1`] = `
"## Shared content components

### FeatureBeta (parameterless)

**Note: Beta**

This feature is in Beta. Please give us [Feedback](https://console.neon.tech/app/projects?modal=feedback) from the Neon Console or by connecting with us on [Discord](https://discord.gg/92vNTzKDGp).

### FeatureBetaProps (with prop)

**Note: Beta**

The **Autoscaling** is in Beta. Share your feedback on [Discord](https://discord.gg/92vNTzKDGp) or via the [Neon Console](https://console.neon.tech/app/projects?modal=feedback).

### EarlyAccessProps (with prop)

**Coming Soon: Early access**

**Schema Diff** is currently in early access.

### AgentSkillsTip (with prop)

**Tip: AI assistant support**

Neon's [Agent Skills](https://neon.com/docs/ai/agent-skills) give AI coding assistants context about branching and other Neon features. Install them for more accurate code suggestions.

### MCPTools
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Steps 1`] = `
"## Steps

### Create a project

Go to the Neon Console and create a new project.

### Connect your app

Use the connection string from your project dashboard.

### Run migrations

Apply your schema migrations to the database.
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Tabs and TabItem 1`] = `
"## Tabs and TabItem

**SQL**

\`\`\`sql
CREATE TABLE users (id SERIAL PRIMARY KEY, name TEXT);
\`\`\`

**CLI**

\`\`\`bash
neon databases create --name mydb
\`\`\`
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > TechCards 1`] = `
"## TechCards

- [Node.js](https://neon.com/docs/guides/node): Connect a Node.js app to Neon
- [Python](https://neon.com/docs/guides/python): Connect a Python app to Neon
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Testimonial 1`] = `
"## Testimonial

> The serverless scaling is exactly what we needed.
>
> — John Doe, StartupCo
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > TwoColumnLayout 1`] = `
"## TwoColumnLayout
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > YoutubeIframe 1`] = `
"## YoutubeIframe

[Watch on YouTube](https://youtube.com/watch?v=dQw4w9WgXcQ)
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > preamble 1`] = `
"# MDX Conversion Test Page

Exercises every component the processor handles
"
`;
